tests/cases/errors/parser/grouping.vnm
fn main() {
  let x = 0;
  let y = 1;
  if (x < y) {
    print (1+2) * (3*4;
  }
  return 0;
}

main();
